Resolve incorrect spacing in header to space-between

--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -3,7 +3,7 @@
   background: papayawhip;
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: space-between;
 }
 
 .logo {
